Fix ad overflow

--- a/css/main.sass
+++ b/css/main.sass
@@ -40,6 +40,10 @@ main
     p
       font-size: 12px
 
+  .card.info.ad-wrapper
+    .card-content
+      overflow-x: auto
+
   .crumb
     padding: 0 24px
     white-space: nowrap
